--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ python3 -m pip install requests
 python3 -m pip install aiohttp
 python3 -m pip install pandas
 python3 -m pip install tabulate
+python3 -m pip install pycountry
 
 
